Fix Icon spacing (#1014)
* fix icon spacing

* tweek button svg spacing

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -21,7 +21,7 @@ $button-border-height: 3px;
   cursor: pointer;
 
   .svg-icon {
-    margin: 0 0 0 0.5rem;
+    margin: 0 0 0.1rem 0.5rem;
     width: 0.8rem;
     height: 0.8rem;
     vertical-align: middle;
